# scrapebot

./: .gitignore  README.md  design.md  pyproject.toml
docs/: DESIGN.md
examples/: ali213_blackmyth.json  ali213_forum_list.json  ali213_thread_detail.json
examples/data/ali213/: scrape_results_20260504_232908.json  scrape_results_20260504_232934.json
scrapebot/: __init__.py  exceptions.py  main.py  registry.py  types.py
scrapebot/ai/: __init__.py  anomaly_detector.py  content_summarizer.py  dynamic_selector.py  instruction_parser.py  llm_client.py
scrapebot/api/rest/: __init__.py  config_api.py  routes.py  stats_api.py  task_api.py
scrapebot/config/: __init__.py  auth_config.py  proxy_config.py  sections.py  settings.py  storage_config.py  store.py  task_config.py
scrapebot/events/: __init__.py  bus.py  types.py
scrapebot/middleware/: __init__.py  chain.py  rate_limiter.py
scrapebot/pipeline/: __init__.py  base.py  storage_sink.py  transformer.py
scrapebot/scheduler/: __init__.py  coordinator.py  dispatcher.py  load_balancer.py
scrapebot/spider/: __init__.py  builder.py  runner.py
scrapebot/storage/: __init__.py  checkpoint_store.py  result_store.py  task_store.py
scrapebot/worker/: __init__.py  executor.py  request_handler.py
tests/: conftest.py
tests/test_events/: test_bus.py
tests/test_middleware/: test_antidetect.py  test_rate_limiter.py
tests/test_pipeline/: test_cleaning.py
tests/test_scheduler/: test_queues.py
tests/test_spider/: test_job_models.py  test_runner.py
tests/test_worker/: test_parsers.py  test_scrape_modes.py
(+68 files in other folders)
