[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scrapebot"
version = "0.1.0"
description = "Distributed web scraping framework with AI-powered parsing"
authors = ["sketch"]
license = "MIT"
readme = "README.md"
packages = [{ include = "scrapebot" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28"
playwright = "^1.52"
redis = "^5.3"
pydantic = "^2.11"
pydantic-settings = "^2.8"
pyyaml = "^6.0"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.34" }
openai = "^1.99"
structlog = "^25.1"
prometheus-client = "^0.21"
lxml = "^5.3"
beautifulsoup4 = "^4.13"
tenacity = "^9.0"
xxhash = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
ruff = "^0.11"

[tool.poetry.scripts]
scrapebot = "scrapebot.main:run"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
